
From now on, Counterclockwise drops Eclipse 3.x support, and only supports Eclipse 4.

Internally, Counterclockwise now uses Clojure 1.7.0-master. It adds a couple patches to it, waiting for the relevant JIRA tickets to be applied mainstream.

=== Fix

- New Clojure Project Wizard honors the 'use previous location' checkbox. Fixes #682


== Changes between Counterclockwise 0.31.1 and 0.31.2

`0.31.2` released on December 4, 2014

=== User Plugins

- Added namespace `ccw.api.markers` for managing resource markers. Resource markers typically appear in the editor margins (error markers, warning markers, tasks, bookmarks, etc.), and in their respective problem views, task views, bookmark views, etc.

Example: creating a new type of marker `ccw-plugin-clj-lint`, simply inheriting from Eclipse-provided Problem markers (implicit inheritence if not provided), with markers that will persist across Eclipse restarts. Then creating a marker for some imaginary `foo.clj` file, located in project `my-project`, in subfolder `src/bar/`

[source,clojure]
----
(require '[ccw.api.markers :refer (register-marker-type! create-marker!)])
(require '[ccw.eclipse     :refer (workspace-resource)])

(register-marker-type!  {:id "ccw-plugin-clj-lint", :persistent true})

(create-marker!
  (workspace-resource "my-project/src/bar/foo.clj")
  {:type        "ccw-plugin-clj-lint"
   :severity    :warning
   :line-number 2
   :message     "The variable baz is unused."})
----


== Changes between Counterclockwise 0.31.0 and 0.31.1

`0.31.1` released on December 4, 2014

=== Fix
- Editors which were open when exiting the IDE would break when reloading. Fix Issue #678 - Error trying to edit a Clojure source file, after upgrading to v0.31.0

=== User Plugins

==== commands