@@ -5,7 +5,7 @@
  <extension point="org.eclipse.ui.console.consolePatternMatchListeners">
     <consolePatternMatchListener
        id="ccw.editors.clojure.StacktraceHyperlink"
-       regex="at .*\([\w]+\.clj:[0-9]+\)">
+       regex="at .*\([\w]+\.clj[\w]?:[0-9]+\)">
         <class class="ccw.util.GenericExecutableExtension">
            <parameter
                  name="factory"
@@ -2773,7 +2773,7 @@
      <content-type
            base-type="org.eclipse.core.runtime.text"
            default-charset="UTF-8"
-           file-extensions="clj,cljs,dtm,edn"
+           file-extensions="clj,cljs,cljx,clja,dtm,edn"
            id="ccw.core.clj"
            name="Clojure/ ClojureScript / Datomic / EDN Source File"
            priority="high">
