@@ -34,6 +34,7 @@ Internally, Counterclockwise now uses Clojure 1.7.0-master. It adds a couple pat
 === Fix
 
 - New Clojure Project Wizard honors the 'use previous location' checkbox. Fixes #682
+- Better support for clojure extension files: `cljs`, `cljx`, `clja`
 
 
 == Changes between Counterclockwise 0.31.1 and 0.31.2
